provide, inject, errorMsg

--- a/index.html
+++ b/index.html
@@ -18,3 +18,12 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+<style>
+  html,
+  body,
+  #app {
+    min-height: 100vh;
+    height: auto;
+    overflow-y: auto;
+  }
+</style>
